@@ -132,6 +132,28 @@ struct pretty_testcase pretty_testcases[] = {
     { "/%5b%5D%40%21%24%26%27%28%29%2A%2B%2c%3b%3D", "/[]@!$&'()*+,;=" },
     { "https://x%3ax%40x%5b%5dx/", 0 },
     { "//x%3ax%40x%5b%5dx/", 0 },
+    { "/f%c3%bcr", "/f\xc3\xbcr" },
+    { "%c3%bc", "\xc3\xbc" },
+    { "%c3%b", 0 },
+    { "%c3%", 0 },
+    { "%c3", 0 },
+    { "%c3x", 0 },
+    { "%80", 0 },
+    { "%bf", 0 },
+    { "/%ff", 0 },
+    { "/%fe%ff%20/", "/%fe%ff /" },
+    { "/%c3%20.htm", "/%c3 .htm" },
+    { "hellip%e2%80%a6.gif", "hellip\xe2\x80\xa6.gif" },
+    { "hellip%e2%80%a", 0 },
+    { "hellip%e2%80", 0 },
+    // Example from #644:
+    { "Szerz%C5%91d%C3%A9sek", "Szerz\xc5\x91""d\xc3\xa9sek" },
+    // Overlong sequences:
+    { "/%C080.nul", 0 },
+    { "%e0%9f%88/index.html", 0 },
+    { "%e0%81%9e/f0%82%81%80-fyi", 0 },
+    // Code point above Unicode range:
+    { "/%f4%90%80%80/", 0 },
     { NULL, NULL }
 };
 
