@@ -1,3 +1,8 @@
+Wed Mar 11 11:07:29 GMT 2015  Olly Betts <olly@survex.com>
+
+	* urldecode.h,urlenctest.cc: $prettyurl now decodes valid UTF-8
+	  sequences.  Fixes #550 and #644, reported by catkin and terencz.
+
 Mon Mar 09 12:31:44 GMT 2015  Olly Betts <olly@survex.com>
 
 	* docs/: Add a document about character encoding, as suggested by
